--- a/src/features/navbar/Sidebar.scss
+++ b/src/features/navbar/Sidebar.scss
@@ -1,13 +1,11 @@
-// src/features/Navbar/Sidebar.scss
 
-// Define los colores locales para el menú para no depender de los globales
 $sidebar-bg: #f5f5f5;
 $sidebar-text: #363636;
 $sidebar-hover-bg: #f5f5f5;
 $sidebar-active-bg: #2E7D32; // Tu verde orgánico
 $sidebar-active-text: #ffffff;
 $sub-sidebar-bg: #f7f7f7;
-$sub-sidebar-hover-bg: #000;
+$sub-sidebar-hover-bg: #f5f5f5;
 
 // --- Capa de fondo ---
 .sidebar-overlay {
@@ -50,7 +48,7 @@ $sub-sidebar-hover-bg: #000;
 // --- Panel Principal de Categorías (Nivel 1) ---
 .sidebar-menu {
   width: 280px;
-  background-color: #fff;
+  background-color: $sidebar-bg;
   flex-shrink: 0;
 
   .sidebar-header {
@@ -70,10 +68,12 @@ $sub-sidebar-hover-bg: #000;
     overflow-y: auto;
     a {
       display: flex;
-      justify-content: space-between;
+      align-items: center;
       align-items: center;
       color: $sidebar-text; 
       border-radius: 0;
+      background-color: $sidebar-bg;
+      padding-bottom: 5%;
       
       &:hover {
         background-color: $sidebar-hover-bg;
@@ -119,8 +119,8 @@ $sub-sidebar-hover-bg: #000;
       background-color: transparent;
       
       &:hover {
-        background-color: $sub-sidebar-hover-bg;
-        color: $sidebar-active-bg; 
+        background-color: $sidebar-active-bg;
+        color: $sub-sidebar-hover-bg; 
       }
     }
   }
