--- a/my-bulma-project.scss
+++ b/my-bulma-project.scss
@@ -25,7 +25,9 @@ $light-grey: #E0E0E0;
   $radius-large: 8px,
 
   $navbar-item-color: $light-bg,
-  $navbar-item-img-max-height: 5rem
+  $navbar-item-img-max-height: 5rem,
+
+  $navbar-height: 6rem
 );
 
 // Importa la Google Font que elijas
