--- a/src/features/profile/profile.scss
+++ b/src/features/profile/profile.scss
@@ -1,3 +1,5 @@
+@use "sass:color" as color;
+
 $primary-color: #00b37e;
 
 .profile-page {
@@ -205,7 +207,7 @@ $primary-color: #00b37e;
     &.is-primary {
        background-color: $primary-color;
        &:hover {
-         background-color: darken($primary-color, 5%);
+        background-color: color.scale($primary-color, $lightness: -14.2458100559%);
        }
     }
     
