--- a/src/features/ShoppingCart/ShoppingCart.scss
+++ b/src/features/ShoppingCart/ShoppingCart.scss
@@ -18,9 +18,9 @@
 .cart-sidebar {
   position: fixed;
   top: 0;
-  right: -100%; // Cambiado para asegurar que esté completamente oculto
+  right: -100%; 
   width: 380px;
-  max-width: 100%; // Asegurar que no exceda el ancho de pantalla
+  max-width: 100%; 
   height: 100vh;
   background: linear-gradient(180deg, #ffffff 0%, #8aac8c 100%);
   box-shadow: -4px 0 10px rgba(0, 0, 0, 0.25);
@@ -30,7 +30,6 @@
   display: flex;
   flex-direction: column;
 
-  // Responsive: hacer el sidebar más angosto en móviles
   @media screen and (max-width: 768px) {
     width: 90%;
     right: -100%;
