--- a/src/features/navbar/Sidebar.scss
+++ b/src/features/navbar/Sidebar.scss
@@ -2,12 +2,10 @@
 $sidebar-bg: #f5f5f5;
 $sidebar-text: #363636;
 $sidebar-hover-bg: #f5f5f5;
-$sidebar-active-bg: #2E7D32; // Tu verde orgánico
+$sidebar-active-bg: #2E7D32;
 $sidebar-active-text: #ffffff;
 $sub-sidebar-bg: #f7f7f7;
 $sub-sidebar-hover-bg: #f5f5f5;
-
-// --- Capa de fondo ---
 .sidebar-overlay {
   position: fixed;
   top: 0;
