--- a/src/features/policy/Policy.scss
+++ b/src/features/policy/Policy.scss
@@ -1,5 +1,3 @@
-// src/features/policy/Policy.scss
-
 @use '../../../my-bulma-project.scss' as vars;
 
 .policy-page {
@@ -12,11 +10,10 @@
     background-position: center;
 
     .title, .subtitle {
-      color: vars.$light-bg; // Texto claro
+      color: vars.$light-bg; 
     }
   }
 
-  // Estilos del "Timeline" de envío
   .shipping-steps {
     .step-item {
       padding: 0 1rem;
@@ -42,10 +39,9 @@
     }
   }
 
-  // Estilos de la Tabla de Costos
   .policy-table {
     border-radius: 8px;
-    overflow: hidden; // Para que el radius afecte al thead
+    overflow: hidden; 
     box-shadow: 0 5px 15px rgba(0,0,0,0.05);
 
     thead {
@@ -56,7 +52,6 @@
     }
   }
 
-  // Aviso de Envío Gratis
   .notification.is-warning {
     background-color: vars.$citrus-orange;
     color: vars.$dark-text;
@@ -65,7 +60,6 @@
     border-radius: 8px;
   }
 
-  // Secciones inferiores
   .policy-section {
     display: flex;
     align-items: flex-start;
